# AdvancedRules

./: .cursorrules  .gitignore  Dockerfile.exporter  FOLDER_STRUCTURE.md  Makefile  RAG_MERGE_CHECKLIST.md  README.md  VALIDATION_SUITE_STRUCTURE.md  action_envelope.json  package.json  pyproject.toml  report2.md  requirements.queue.txt  requirements.txt  workflow_state.json  workflow_state_backup.json
.artifacts/: feature_request_to_pr.mmd
.cursor/commands/: registry.yaml
.cursor/rules/: ai-personas-reference.mdc  code-quality-standards.mdc  decision-scoring-orchestration.mdc  development-workflow.mdc  domain-development.mdc  prestart-upwork-integration.mdc  project-management-workflow.mdc  project-overview.mdc  readiness_check.mdc  security-best-practices.mdc  task_decomposer.mdc  testing-quality-assurance.mdc
.cursor/rules/domains/: node.mdc  python.mdc
.cursor/rules/domains/backend/: python.md
.cursor/rules/domains/frontend/: react.md
.cursor/rules/kits/prestart/: ai_team_simulation.mdc  capacity_planner.md  capacity_planner.mdc  client_screener.md  client_screener.mdc  demo_ai_team.py  demo_playbook.mdc  estimate_sizer.md  estimate_sizer.mdc  pricing_policy.mdc  proposal_builder.mdc  repo_bootstrapper.mdc  risk_catalog.mdc  scope_guard.mdc
.cursor/rules/orchestrator/: scenario_router.mdc
.cursor/rules/roles/: context_manager_ai.md  team_orchestrator_ai.md
.github/workflows/: rag-check.yml  validate.yml
cli/: __init__.py  ar_flow.py  ar_memory.py  ar_tasks.py  main.py
config/: README.md  advanced_rules.yaml
docker/: Dockerfile.worker  docker-compose.queue.yaml
docs/: CODEBASE_ANALYSIS_REPORT.md  INTEGRATION_GUIDE.md  METRICS_RUNBOOK.md  QUEUE_SYSTEM_TEST_REPORT.md  README.md  UPWORK_IMPLEMENTATION_GUIDE.md  report1.md  report2.md
docs/ADRs/: README.md
docs/reports/: QUEUE_SYSTEM_TEST_REPORT.md  TEST_SUMMARY.md
exec_queue/: __init__.py  celery_app.py  tasks.py
flow/: flow_registry.yaml
logs/: README.md  events.jsonl  rule_attach_log.json
logs/decisions/: 20250828_103713.json  20250828_112239.json  20250828_142251.json
logs/observability/: summary.json  summary.md
memory/: __init__.py  bridge.py
memory-bank/: README.md  artifacts_index.json
memory-bank/business/: capacity_report.md  client_score.json  estimate_brief.md  pricing.ratecard.yaml
memory-bank/plan/: Action_Plan.md  Summary_Report.md  acceptance_criteria.json  client_brief.md  framework_analysis_prompt.md  product_backlog.yaml  product_vision.md  proposal.md  simple_framework_analysis_prompt.md  technical_plan.md  user_stories.md
memory-bank/upwork/: offer_status.json
memory/indexers/: code_indexer.py  md_indexer.py  web_indexer.py
memory/vector/: chroma_adapter.py  embeddings.py
observability/: __init__.py  collector.py
observability/dashboards/: flows_overview.json
observability/exporters/: __init__.py  prometheus.py
reports/: REPORT_A.md  REPORT_B.MD  REPORT_C.md  REPORT_D.md  REPORT_E.MD  REPORT_F.md  REPORT_G.md  REPORT_H.md  REPORT_I.md
schema/: README.md
schemas/: flow_schema.json  memory_doc_schema.json  metrics_schema.json  task_schema.json
scripts/: README.md  assert_metrics.py  end_to_end_simulation.py  enqueue_load.py  phase0_safety.sh  phase1_planning.sh  phase2_flows.sh  phase3_rag.sh  phase4_metrics.sh  phase5_queue.sh  test_memory_smoke.sh  validate_all.sh  validate_prestart.sh  validate_safety_rails.py
tests/: README.md  test_memory_basic.py  test_planning_pipeline.py
tools/: README.md  instrumentation.py
tools/decision_scoring/: calibration.json  execute_envelope.sh
tools/decision_scoring/examples/: decision_candidates.json
tools/envelopes/: action_envelope_v2.json
tools/flow/: flow_linter.py  flow_runner.py
tools/planning/: priority_scheduler.py  task_decomposer.py
tools/rule_attach/: detect.py
tools/runner/plugins/: product_owner.py
workers/: flow_worker.py
