[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advancedrules"
version = "2.0.0"
description = "AdvancedRules v2 - Declarative Workflow Orchestration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "chromadb",
    "sentence-transformers",
    "torch",
    "transformers",
    "pyyaml>=6.0",
    "networkx>=2.8",
    "click>=8.0",
    "celery>=5.3",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/HaymayndzUltra/AdvancedRules"
Repository = "https://github.com/HaymayndzUltra/AdvancedRules.git"
Issues = "https://github.com/HaymayndzUltra/AdvancedRules/issues"

[project.scripts]
arx = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["advancedrules*", "cli*", "exec_queue*", "workers*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
